--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "expo-media-library",
+  "name": "@kunalukey/expo-media-library-video-patch",
   "version": "16.0.5",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "Provides access to user's media library.",
   "main": "build/MediaLibrary.js",
   "types": "build/MediaLibrary.d.ts",
